# dual-direction-mech-interp

./: .gitignore  README.md  manifest.json  pyproject.toml
artifacts/cross_ablation/: meta_llama_Llama_3.1_8B_Instruct_results.json  meta_llama_Llama_3.1_8B_Instruct_sweep.json
artifacts/cross_model/: Qwen_Qwen3_8B_comparison.json  combined_results.json  unsloth_gemma_2_9b_it_bnb_4bit_comparison.json
artifacts/directions/: meta_llama_Llama_3.1_8B_Instruct_comparison.json  meta_llama_Llama_3.1_8B_Instruct_epistemic.json  meta_llama_Llama_3.1_8B_Instruct_safety.json
artifacts/probes/: meta_llama_Llama_3.1_8B_Instruct_epistemic_probe.json
artifacts/quantization/: meta_llama_Llama_3.1_8B_Instruct_sweep.json
configs/experiment/: gemma2_2b.yaml  llama31_8b.yaml  phi4_mini.yaml  qwen25_7b.yaml  qwen3_8b.yaml
notebooks/: experiment1.ipynb
scripts/: compare_directions.py  cross_ablation.py  cross_model_replication.py  export_artifacts_bundle.py  extract_directions.py  generate_figures.py  linear_probe.py  quantization_sweep.py  run_all.py
src/ddmi/: __init__.py
src/ddmi/data/: __init__.py  loaders.py
src/ddmi/editing/: __init__.py  apply_edit.py  directions.py  projection.py
src/ddmi/evaluation/: __init__.py  detectors.py  metrics.py  probes.py
src/ddmi/models/: __init__.py  generation.py  hooks.py  loader.py
src/ddmi/utils/: __init__.py  io.py
tests/: test_apply_edit.py  test_detectors.py  test_directions.py  test_metrics.py  test_probes.py
